--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
 
-        <form action="">
+        <form action="" netlify>
             <div class="input-group">
                 <div class="input-box">
                     <input type="text" placeholder="Full Name">
